@@ -111,6 +111,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-4334: PigProcessor does not set pig.datetime.default.tz (rohini)
+
 PIG-4325: StackOverflow when spilling InternalCachedBag (daijy)
 
 PIG-4324: Remove jsch-LICENSE.txt (daijy)
